--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
     <section id="donate">
         <h1>Donate</h1>
-        <p>Donate to help us rescue animals and restore habitats. (Demo)</p>
+        <p>Donate to help us rescue animals and restore habitats. </p>
         <div class="form-container">
             <form>
                 <input type="text" placeholder="Card Number" required>
