--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
             <a href="#mission">Mission</a>
             <a href="#volunteer">Join Us</a>
             <a href="#donate">Donate</a>
+            <a href="/blog.html">Blogs</a>
             <a href="#contact">Contact</a>
+            
         </div>
     </nav>
 
